--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "node-sass --watch src/scss -o assets/css"
+    "scss": "node-sass --watch src/scss -o assets/css",
+    "start_gulp": "gulp connect-sync"
   },
   "repository": {
     "type": "git",
